RESOLVED FIXED226104
REGRESSION(r276993): 5 TestWebKitAPI.AudioRoutingArbitration (api-tests) are constant failures
https://bugs.webkit.org/show_bug.cgi?id=226104
Summary REGRESSION(r276993): 5 TestWebKitAPI.AudioRoutingArbitration (api-tests) are ...
Jer Noble
Reported 2021-05-21 13:00:57 PDT
REGRESSION(r276993): 5 TestWebKitAPI.AudioRoutingArbitration (api-tests) are constant failures
Attachments
Patch (19.86 KB, patch)
2021-05-21 13:11 PDT, Jer Noble
ews-feeder: commit-queue-
Patch (19.04 KB, patch)
2021-05-21 13:46 PDT, Jer Noble
ews-feeder: commit-queue-
Patch (19.34 KB, patch)
2021-05-21 14:00 PDT, Jer Noble
no flags
Patch (22.62 KB, patch)
2021-05-21 15:54 PDT, Jer Noble
eric.carlson: review+
ews-feeder: commit-queue-
Patch for landing (25.33 KB, patch)
2021-05-21 17:15 PDT, Jer Noble
no flags
Patch for landing (19.92 KB, patch)
2021-06-02 09:01 PDT, Jer Noble
ews-feeder: commit-queue-
Patch for landing (19.94 KB, patch)
2021-06-02 10:35 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2021-05-21 13:01:15 PDT
Jer Noble
Comment 2 2021-05-21 13:11:47 PDT
Jer Noble
Comment 3 2021-05-21 13:46:20 PDT
Jer Noble
Comment 4 2021-05-21 14:00:29 PDT
Jer Noble
Comment 5 2021-05-21 15:54:40 PDT
Jer Noble
Comment 6 2021-05-21 17:15:49 PDT
Created attachment 429373 [details] Patch for landing
Eric Carlson
Comment 7 2021-05-21 17:29:17 PDT
Comment on attachment 429355 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=429355&action=review > Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.h:291 > + bool currentDataAvailable() const { return m_readyState >= MediaPlayer::ReadyState::HaveCurrentData; } You probably didn't mean to include this :-)
Jer Noble
Comment 8 2021-06-02 09:01:33 PDT
Created attachment 430366 [details] Patch for landing
Jer Noble
Comment 9 2021-06-02 10:35:30 PDT
Created attachment 430374 [details] Patch for landing
EWS
Comment 10 2021-06-02 14:36:00 PDT
Committed r278374 (238401@main): <https://commits.webkit.org/238401@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430374 [details].
Note You need to log in before you can comment on or make changes to this bug.