Source/WebKit/WebProcess/GPU/GPUProcessConnection.cpp
@@ -85,6 +85,10 @@
 #include <WebCore/VP9UtilitiesCocoa.h>
 #endif
 
+#if ENABLE(ROUTING_ARBITRATION)
+#include "AudioSessionRoutingArbitrator.h"
+#endif
+
 namespace WebKit {
 using namespace WebCore;
 
@@ -232,6 +236,29 @@ void GPUProcessConnection::didReceiveRemoteCommand(PlatformMediaSession::RemoteC
 {
     PlatformMediaSessionManager::sharedManager().processDidReceiveRemoteControlCommand(type, argument);
 }
+
+#if ENABLE(ROUTING_ARBITRATION)
+void GPUProcessConnection::beginRoutingArbitrationWithCategory(AudioSession::CategoryType category, AudioSessionRoutingArbitrationClient::ArbitrationCallback&& callback)
+{
+    if (auto* arbitrator = WebProcess::singleton().supplement<AudioSessionRoutingArbitrator>()) {
+        arbitrator->beginRoutingArbitrationWithCategory(category, WTFMove(callback));
+        return;
+    }
+
+    ASSERT_NOT_REACHED();
+    callback(AudioSessionRoutingArbitrationClient::RoutingArbitrationError::Failed, AudioSessionRoutingArbitrationClient::DefaultRouteChanged::No);
+}
+
+void GPUProcessConnection::endRoutingArbitration()
+{
+    if (auto* arbitrator = WebProcess::singleton().supplement<AudioSessionRoutingArbitrator>()) {
+        arbitrator->leaveRoutingAbritration();
+        return;
+    }
+
+    ASSERT_NOT_REACHED();
+}
+#endif
 
 #if HAVE(VISIBILITY_PROPAGATION_VIEW)
 void GPUProcessConnection::createVisibilityPropagationContextForPage(WebPage& page)
